--- a/css/assignment_one.css
+++ b/css/assignment_one.css
@@ -4,3 +4,148 @@ Only this will be graded.
 */
 
 
+/* Desktop Styles  */
+body {
+  
+  margin: 0 auto;
+}
+
+header {
+  padding: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#topMenu{
+  display: flex;
+  gap: 30px;
+}
+
+div#mainBody {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  gap: 100px;
+}
+
+div#leftContainer, 
+div#rightContainer {
+  margin: 0 auto;
+  gap: 100px;
+  
+}
+
+div#rightContainer {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: repeat(3, 160px);
+  gap: 10px;
+  grid-template-areas:
+  'a b c'
+  'a d e'
+  'a f g';
+}
+
+.zero{
+  grid-area: a;
+  width: 200px;
+}
+.one{
+  grid-area: b;
+  width: 100px;
+}
+.two{
+  grid-area: c;
+  width: 100px;
+}
+.three{
+  grid-area: d;
+  width: 100px;
+}
+.four{
+  grid-area: e;
+  width: 100px;
+}
+.five{
+  grid-area: f;
+  width: 100px;
+}
+.six{
+  grid-area: g;
+  width: 100px;
+}
+
+/* Tablet Styles - Max Width 1000px */
+@media (max-device-width: 1000px) {
+  body {
+      width: 60%;
+      margin: 0 auto;
+  }
+header{
+  flex-direction: column;
+  align-items: start;
+
+}
+  #mainBody {
+    display: flex;
+    margin: 0 auto;
+      flex-direction: column;
+      gap: 40px;
+  }
+
+  div#leftContainer,
+  div#rightContainer {
+      width: 100%;
+
+      
+  }
+
+  div#rightContainer {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(3, 160px);
+      
+  }
+
+  .display_md {
+      display: none;
+      
+  }
+}
+
+/* Mobile Styles - Max Width 570px */
+@media (max-device-width: 570px) {
+  body {
+      width: 80%;
+  }
+
+  header {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+      
+  }
+
+  nav {
+      justify-content: flex-start;
+  }
+
+  #mainBody {
+      flex-direction: column;
+      gap: 20px;
+  }
+
+  #leftContainer,
+  #rightContainer {
+      width: 100%;
+  }
+
+  #rightContainer {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(3, 160px);
+  }
+
+  .display_md {
+      display: none;
+  }
+}
