--- a/css/assignment_one.css
+++ b/css/assignment_one.css
@@ -6,7 +6,7 @@ Only this will be graded.
 
 /* Desktop Styles  */
 body {
-  
+
   margin: 0 auto;
 }
 
@@ -80,32 +80,58 @@ div#rightContainer {
 @media (max-device-width: 1000px) {
   body {
       width: 60%;
-      margin: 0 auto;
+  
   }
+
+#topMenu{
+  display: flex;
+  gap: 5px;
+
+}
+
 header{
   flex-direction: column;
   align-items: start;
 
 }
-  #mainBody {
+  div#mainBody {
     display: flex;
-    margin: 0 auto;
+  
       flex-direction: column;
       gap: 40px;
   }
 
   div#leftContainer,
   div#rightContainer {
-      width: 100%;
+     gap: 40px;
 
       
   }
 
   div#rightContainer {
+    gap: 10px;
+    padding-bottom: 30px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(3, 160px);
+      grid-template-areas: 
+      'b c'
+      'd e'
+      'f g';
       
   }
+  .one {
+    grid-area: b;
+    width: 250px; }
+  .two { grid-area: c;
+    width: 250px; }
+  .three { grid-area: d;
+    width: 250px; }
+  .four { grid-area: e;
+    width: 250px; }
+  .five { grid-area: f;
+    width: 250px;}
+  .six { grid-area: g;
+    width: 250px; }
 
   .display_md {
       display: none;
@@ -141,10 +167,11 @@ header{
   }
 
   #rightContainer {
+    gap: 10px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(3, 160px);
   }
-
+  
   .display_md {
       display: none;
   }
